--- a/emperio/src/emperio/MainFrame.form
+++ b/emperio/src/emperio/MainFrame.form
@@ -3,10 +3,13 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="99" green="99" red="99" type="rgb"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -23,13 +26,91 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="400" max="32767" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="270" max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" pref="640" max="-2" attributes="0"/>
+              <EmptySpace pref="290" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="jLabel2" min="-2" pref="391" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="397" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="CrytpingButton" min="-2" pref="200" max="-2" attributes="0"/>
+                          <Component id="SettingButton" alignment="0" min="-2" pref="200" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="465" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="MarksButton" min="-2" pref="452" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="346" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <EmptySpace min="0" pref="300" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" pref="71" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jLabel2" min="-2" pref="88" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
+              <Component id="SettingButton" min="-2" pref="50" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="CrytpingButton" min="-2" pref="50" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="MarksButton" min="-2" pref="50" max="-2" attributes="0"/>
+              <EmptySpace pref="141" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
   </Layout>
+  <SubComponents>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="20" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="&#x627;&#x644;&#x62c;&#x645;&#x647;&#x648;&#x631;&#x64a;&#x629; &#x627;&#x644;&#x62c;&#x632;&#x627;&#x626;&#x631;&#x64a;&#x629; &#x627;&#x644;&#x62f;&#x64a;&#x645;&#x642;&#x631;&#x627;&#x637;&#x64a;&#x629; &#x627;&#x644;&#x634;&#x639;&#x628;&#x64a;&#x629; &#x648;&#x632;&#x627;&#x631;&#x629; &#x627;&#x644;&#x62a;&#x639;&#x644;&#x64a;&#x645; &#x627;&#x644;&#x639;&#x627;&#x644;&#x64a; &#x648;&#x627;&#x644;&#x628;&#x62d;&#x62b; &#x627;&#x644;&#x639;&#x644;&#x645;&#x64a;   &#x62c;&#x627;&#x645;&#x639;&#x629; &#x639;&#x645;&#x627;&#x631; &#x62b;&#x644;&#x64a;&#x62c;&#x64a;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="25" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="&#x628;&#x631;&#x646;&#x627;&#x645;&#x62c; &#x62a;&#x633;&#x64a;&#x64a;&#x631; &#x627;&#x644;&#x645;&#x633;&#x627;&#x628;&#x642;&#x627;&#x62a; &#x627;&#x644;&#x643;&#x62a;&#x627;&#x628;&#x64a;&#x629;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="CrytpingButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#x627;&#x644;&#x62a;&#x634;&#x641;&#x64a;&#x631;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CrytpingButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="MarksButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#x62d;&#x62c;&#x632; &#x627;&#x644;&#x646;&#x642;&#x627;&#x637; &#x648;&#x627;&#x644;&#x643;&#x634;&#x641; &#x639;&#x644;&#x649; &#x627;&#x644;&#x646;&#x62a;&#x627;&#x626;&#x62c;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MarksButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="SettingButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#x627;&#x644;&#x627;&#x639;&#x62f;&#x627;&#x62f;&#x627;&#x62a;"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SettingButtonActionPerformed"/>
+      </Events>
+    </Component>
+  </SubComponents>
 </Form>
