--- a/emperio/src/emperio/CryptingFrame.form
+++ b/emperio/src/emperio/CryptingFrame.form
@@ -25,7 +25,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="183" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="DownloadButton" min="-2" pref="295" max="-2" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
@@ -64,7 +64,7 @@
               <Component id="CryptingButton" min="-2" pref="41" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="352" max="-2" attributes="0"/>
-              <EmptySpace pref="169" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="DownloadButton" min="-2" pref="48" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
           </Group>
