--- a/emperio/src/emperio/MarksFrame.form
+++ b/emperio/src/emperio/MarksFrame.form
@@ -112,10 +112,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="&#x627;&#x644;&#x645;&#x639;&#x62f;&#x644; " type="java.lang.Object"/>
-                <Column editable="true" title="&#x627;&#x644;&#x645;&#x627;&#x62f;&#x629;2" type="java.lang.Object"/>
-                <Column editable="true" title="&#x627;&#x644;&#x645;&#x627;&#x62f;&#x629; 1" type="java.lang.Object"/>
-                <Column editable="true" title="&#x627;&#x644;&#x631;&#x645;&#x632; &#x627;&#x644;&#x633;&#x631;&#x64a;" type="java.lang.Object"/>
+                <Column editable="true" title="code" type="java.lang.Object"/>
+                <Column editable="true" title="module1" type="java.lang.Object"/>
+                <Column editable="true" title="module2" type="java.lang.Object"/>
+                <Column editable="true" title="moy" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -154,6 +154,7 @@
         <Property name="text" type="java.lang.String" value="&#x641;&#x643; &#x627;&#x644;&#x62a;&#x634;&#x641;&#x64a;&#x631;"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
