--- a/emperio/src/emperio/CryptingFrame.form
+++ b/emperio/src/emperio/CryptingFrame.form
@@ -78,13 +78,13 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="7" rowCount="4">
-                <Column editable="true" title="id" type="java.lang.Object"/>
-                <Column editable="true" title="cd1" type="java.lang.Object"/>
-                <Column editable="true" title="cd2" type="java.lang.Object"/>
-                <Column editable="true" title="fname" type="java.lang.Object"/>
-                <Column editable="true" title="lname" type="java.lang.Object"/>
-                <Column editable="true" title="datd" type="java.lang.Object"/>
-                <Column editable="true" title="univ" type="java.lang.Object"/>
+                <Column editable="true" title="&#x631;&#x642;&#x645;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x634;&#x641;&#x631;&#x629;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x634;&#x641;&#x631;&#x629; &#x627;&#x644;&#x644;&#x62c;&#x646;&#x629;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x627;&#x633;&#x645;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x644;&#x642;&#x628;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x62a;&#x627;&#x631;&#x64a;&#x62e; &#x627;&#x644;&#x645;&#x64a;&#xfefb;&#x62f;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x634;&#x639;&#x628;&#x629;" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
