--- a/emperio/src/emperio/SettingsFrame.form
+++ b/emperio/src/emperio/SettingsFrame.form
@@ -36,15 +36,9 @@
                       <Component id="jLabel4" min="-2" pref="23" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="departementText" alignment="1" min="-2" pref="274" max="-2" attributes="0"/>
-                          <Component id="moduleComboBox" min="-2" pref="274" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="departementText" min="-2" pref="274" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="moduleLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="departementLabel" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="departementLabel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="393" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -66,12 +60,7 @@
                   <Component id="departementText" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="departementLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="moduleComboBox" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
-                  <Component id="moduleLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="373" max="32767" attributes="0"/>
+              <EmptySpace pref="429" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -83,30 +72,6 @@
           <Font name="Arial" size="25" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="&#x62a;&#x639;&#x62f;&#x64a;&#x644; &#x627;&#x644;&#x627;&#x639;&#x62f;&#x627;&#x62f;&#x627;&#x62a;"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JComboBox" name="moduleComboBox">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Math"/>
-            <StringItem index="1" value="Logic"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="moduleComboBoxActionPerformed"/>
-      </Events>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
-    </Component>
-    <Component class="javax.swing.JLabel" name="moduleLabel">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Arial" size="20" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="&#x627;&#x644;&#x645;&#x642;&#x64a;&#x627;&#x633;"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="departementText">
