--- a/emperio/src/emperio/MarksFrame.form
+++ b/emperio/src/emperio/MarksFrame.form
@@ -113,10 +113,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
-                <Column editable="true" title="code" type="java.lang.Object"/>
-                <Column editable="true" title="module1" type="java.lang.Object"/>
-                <Column editable="true" title="module2" type="java.lang.Object"/>
-                <Column editable="true" title="moy" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x634;&#x641;&#x631;&#x629;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x645;&#x627;&#x62f;&#x629;1" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x645;&#x627;&#x62f;&#x629;2" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x645;&#x639;&#x62f;&#x644;" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
