--- a/emperio/src/emperio/MarksFrame2.form
+++ b/emperio/src/emperio/MarksFrame2.form
@@ -133,8 +133,8 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="4">
-                <Column editable="true" title="code" type="java.lang.Object"/>
-                <Column editable="true" title="moyenne" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x634;&#x641;&#x631;&#x629;" type="java.lang.Object"/>
+                <Column editable="true" title="&#x627;&#x644;&#x646;&#x642;&#x637;&#x629;" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
